app/assets/stylesheets/framework_and_overrides.css.scss
// import the CSS framework
@import "bootstrap-sprockets";
@import "bootstrap";

//= depend_on_asset 'species_images/IMG_3438.jpg'

div.vertical-spacer {
  height: 10px;
}

div.move-right {
  display: inline-block;
  min-width: 20%;
}

div.isolate-copy {
  min-width: 45%;
  display: inline-block;
  border-radius: 5px;
  border: 1px solid #eeeeee;
  margin-bottom: 10px;
  padding: 10px;
}

.nav-shadow {
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.15);
}

a {
  color: inherit;

  &:visited {
    color: inherit;
  }
  &:hover {
    color: #3072ed;
    text-decoration: none;
  }
}

a.my-btn {

  color: white;

  &:visited {
    color: white;
  }
  &:hover {
    color: white;
    text-decoration: none;
  }
}

.column {
  @extend .col-md-6;
  @extend .text-center;
}
.form {
  @extend .col-md-6;
}
.form-centered {
  @extend .col-md-6;
  @extend .text-center;
}
.submit {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-lg;
}

// apply styles to HTML elements
// to make views framework-neutral
main {
  @extend .container;
  //  background-color: #eee;
  padding-bottom: 80px;
  width: 100%;
  margin-top: 51px; // accommodate the navbar
}

section {
  @extend .row;
  margin-top: 20px;
}

input[type=text] {
  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;

  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

textarea {
  padding: 0px !important;
  margin: 0px !important;
  border: 1px solid lightgrey !important;
  overflow: auto !important;
  outline: none !important;

  -webkit-box-shadow: none !important;
  -moz-box-shadow: none !important;
  box-shadow: none !important;
}

input.sequence_position_left {
  text-align: right;
  width: 40px;
  border: 0;
}
input.sequence_position_right {
  text-align: left;
  width: 40px;
  border: 0;
}

.authform {
  padding-top: 30px;
  max-width: 320px;
  margin: 0 auto;
}
.authform form {
  @extend .well;
  @extend .well-lg;
  padding-bottom: 40px;
}
.authform .right {
  float: right !important;
}
.authform .button {
  @extend .btn;
  @extend .btn-primary;
}
.authform fieldset {
  @extend .well;
}
#error_explanation {
  @extend .alert;
  @extend .alert-danger;
}
#error_explanation h2 {
  font-size: 16px;
}
.button-xs {
  @extend .btn;
  @extend .btn-primary;
  @extend .btn-xs;
}

body {
  background-color: #ededed;
}

div.about-background {
  background-color: #fffffa;
}

body.about_page {
  background: image-url('species_images/IMG_3438.jpg') fixed;
  margin-bottom: 15px; /* Margin bottom by footer height */
}

.isolate-copy-label {
  font-size: large;
  background-color: #eff4f4;
  margin-bottom: 10px;
  border-radius: 3px;
  padding: 3px;
}

// Overview diagram styles:

.overview_diagram h3 {
  font-size: 24px;
}

#main {
  //float: left;
  font-size: 12px;
  font-weight: 400;
  background-color: #fff;
  //height: 750px;
  //margin-top: 10px;
  overflow-x: auto;
}

#sidebar {
  float: right;
  width: 130px;
}

#legend {
  padding: 10px 0 0 3px;
}

.sequence {
  width: 600px;
  height: 70px;
  font-size: 13px;
}

.sequence text, #legend text {
  font-weight: 600;
  fill: #fff;
}

.chart {
  position: relative;
}

.chart path {
  stroke: #fff;
}

.explanation {
  position: absolute;
  top: 190px;
  left: 255px;
  width: 140px;
  text-align: center;
  color: #666;
}

.percentage {
  font-size: 2.5em;
  display: inline-block;
}

// Advanced search styles:

ul.ui-autocomplete {
  max-height: 200px;
  overflow-y: auto;
  overflow-x: hidden;
  position: absolute;
  list-style: none;
  margin: 0;
  padding: 0;
  border: solid 1px lightgrey;
  cursor: default;
  li {
    background-color: white;
    margin: 0;
    padding: 3px;
    a {
      color: #000;
      display: block;
      padding: 3px;
    }
    a.ui-state-hover, a.ui-state-active {
      background-color: lightgrey;
    }
  }
}

.hasDatepicker {
  display: inline-block;
}

.ui-helper-hidden-accessible {
  display: none;
}

.table.table-striped.table-hover.table-bordered {
  width: 100% !important;
}

input.form-control {
  border: 1px solid lightgrey !important;
  padding: 5px !important;
  width: auto !important;
}

select.form-control {
  border: 1px solid lightgrey !important;
  padding: 5px !important;
  width: auto !important;
}

a.anchor {
  display: block;
  position: relative;
  top: -30px;
  visibility: hidden;
}

// Styles for sticky footer:
html {
  position: relative;
  min-height: 100%;
}

.page-footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  line-height: 15px; /* Vertically center the text there */
}

// Styles for bootstrap-multiselects:
.multiselect-container > li > a {
  padding-left: 0;
}

.multiselect-item.multiselect-group > a {
  padding-left: 0;
}

// Styles for read dropdown menu in contig view
/* Dropdown Button */
.dropbtn {
  padding: 14px;
  font-size: 14px;
  cursor: pointer;
}

/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
  color: #2980B9;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
  font-size: 14px;
}

/* Links inside the dropdown */
.dropdown-content a {
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #ddd
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
  display: block;
}

/* Styles for Devise */
.radio, .checkbox {
  margin-left: 20px;
}

/* Styles for nested taxa index */
.higher_order_taxon {
  border: 1px solid lightgrey;
  margin: 4px 8px;
  padding: 5px;
  height: 34px;
  color: #555555;
  background-color: #fff;
  background-image: none;
  border-radius: 4px;
  display: inline-block
}

.nested_taxa {
  margin-left: 2%;
}

.nested_taxa .nested_taxa .nested_taxa .nested_taxa .nested_taxa .nested_taxa {
  margin-left: 0;
}

/* Styles for Chosen */
.chosen-container-multi .chosen-choices {
  //display: inline-block;
  border: 1px solid lightgrey;
  border-radius: 4px;
  background-color: #fff;
  background-image: none;
  padding: 5px;
}

.chosen-container {
  font-size: 14px;
  width: 190px !important;
}

/* Do not show page control buttons in NGS result view */
div#ngs_run_results_wrapper div.dataTables_paginate {
  display:none;
}

div#ngs_run_results_wrapper div.dataTables_length {
  display:none;
}

.visualization {
  display: inline-block;
  position: relative;
  width: 100%;
  vertical-align: top;
  overflow: hidden;
}

.svg-content {
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0;
}

.diagram_title {
  margin-bottom: 10px;
}

